# paynless

./: README.md
business-app/: README.md  pubspec.yaml
business-app/android/app/: build.gradle  google-services.json
business-app/assets/anims/: enable-location-animation.json
business-app/ios/Runner/: Info.plist
business-app/ios/Runner.xcodeproj/: project.pbxproj
business-app/lib/: firebase_options.dart  main.dart
business-app/lib/api/: auth_services.dart
business-app/lib/handlers/: auth_handler.dart
business-app/lib/providers/: user_provider.dart
business-app/lib/res/: constraints.dart  routes.dart  size.dart  size_config.dart  style.dart  toast.dart
business-app/lib/services/: http_service.dart
business-app/linux/: CMakeLists.txt  my_application.cc
business-app/macos/Flutter/: GeneratedPluginRegistrant.swift
business-app/macos/Runner.xcodeproj/: project.pbxproj
business-app/web/: index.html  manifest.json
business-app/windows/: CMakeLists.txt
server/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  build.sh  docker-compose.yml  pyproject.toml
server/backend/: asgi.py  environment.py  settings.py  urls.py
server/backend/core/: apps.py  models.py  serializers.py  urls.py  views.py
server/backend/realtime/: auth.py  consumers.py  urls.py
user-app/: README.md  pubspec.yaml
user-app/android/app/: build.gradle  (+1 more)
user-app/lib/: firebase_options.dart  main.dart
user-app/linux/: CMakeLists.txt  my_application.cc
user-app/test/: widget_test.dart
user-app/web/: index.html  manifest.json
user-app/windows/: CMakeLists.txt
(+45 files in other folders)
